# iana-tld-extractor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  raw.csv  tld.csv
.github/workflows/: main.yml
cmake/Modules/: FindLibIDN2.cmake
misc/: myhtml_gnu_ar.diff  update-iana-db.sh
src/: main.c
